--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1 -e js,hbs",
-    "start": "nodemon src/app.js",
-    "watch": " nodemon js hbs ejs css -e  *"
+    "watch": " nodemon js hbs ejs css -e  *",
+     "dev": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
